[add] fixed header with lists

--- a/index.html
+++ b/index.html
@@ -5,14 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/style.css">
 
-  <title>Document</title>
+  <title>Dropbox</title>
 </head>
 
 <body>
 
-  <header>H</header>
+  <header class="d-flex">
 
-  <main>M</main>
+    <div class="navbar d-flex">
+      <div class="col debug">        
+        <ul>
+          <li class="logo">Logo</li>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Funzioni</a></li>
+          <li><a href="#">Piani e Prezzi</a></li>
+        </ul>        
+      </div>
+      
+      <div class="col debug">
+        <ul>
+          <li><a href="#">Perchè Dropbox</a></li>
+          <li><a href="#">Funzioni</a></li>
+          <li><a href="#">Piani e Prezzi</a></li>
+          <li class="logo"><a href="#">Accedi</a></li>
+        </ul>
+      </div>
+    </div>
+
+    </div>
+
+  </header>
+
+  <main>
+
+    <div id="jumbotron" class="debug">
+
+    </div>
+
+  </main>
 
   <footer>F</footer>
   
