[add] main jumbotron

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
   <main>
 
     <div id="jumbotron" class="debug">
-
+       <div class="jumbo-box">
+        
+       </div>
     </div>
 
   </main>
