[add] partner main section box

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="d-flex">
 
     <div class="navbar d-flex">
-      <div class="col debug">        
+      <div class="col">        
         <ul>
           <li class="logo">Logo</li>
           <li><a href="#">Perchè Dropbox</a></li>
@@ -25,7 +25,7 @@
         </ul>        
       </div>
       
-      <div class="col debug">
+      <div class="col">
         <ul>
           <li><a href="#">Perchè Dropbox</a></li>
           <li><a href="#">Funzioni</a></li>
@@ -86,14 +86,36 @@
 
             </div>
           </div>
+
+          <div class="col large">
+            <div class="card">
+              <div class="usertype"><i class="fa-solid fa-building"></i> Team</div>
+              <div class="offer large"></div>
+
+            </div>
+          </div>
   
         </div>
       </div>
     </section>
 
-    <section class="partner"></section>
+    <section class="partner">
+      <div class="container d-flex">
+        <div class="partner-img debug"></div>
+        <div class="partner-txt debug"></div>
+      </div>
+    </section>
 
-    <section class="business"></section>
+    <section class="business">
+      <div class="container">
+        <div class="business-title">
+          <h2>Esegui più operazioni con Dropbox Business</h2>
+        </div>
+        <div class="row">
+        </div>
+        <div class="business-end"></div>
+      </div>
+    </section>
 
   </main>
 
