[add] main section functions container

--- a/index.html
+++ b/index.html
@@ -112,8 +112,53 @@
           <h2>Esegui più operazioni con Dropbox Business</h2>
         </div>
         <div class="row">
+          <div class="col">
+            <div class="functions debug">
+              <div class="img"></div>
+              <div class="txt"></div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="functions debug">
+              <div class="img"></div>
+              <div class="txt"></div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="functions debug">
+              <div class="img"></div>
+              <div class="txt"></div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="functions debug">
+              <div class="img"></div>
+              <div class="txt"></div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="functions debug">
+              <div class="img"></div>
+              <div class="txt"></div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="functions debug">
+              <div class="img"></div>
+              <div class="txt"></div>
+            </div>
+          </div>
         </div>
-        <div class="business-end"></div>
+        
+        <div class="business-end">
+          <h2>Più di 500.000 team utilizzano <br> Dropbox Business</h2>
+          <a href="#">Scopri di più sui nostri clienti</a>
+        </div>
       </div>
     </section>
 
