--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="navbar d-flex">
       <div class="col">        
         <ul>
-          <li class="logo">Logo</li>
+          <li class="logo"><img src="./assets/img/logo-small.png" alt="logo"></li>
           <li><a href="#">Perchè Dropbox</a></li>
           <li><a href="#">Funzioni</a></li>
           <li><a href="#">Piani e Prezzi</a></li>
@@ -27,10 +27,10 @@
       
       <div class="col">
         <ul>
-          <li><a href="#">Perchè Dropbox</a></li>
-          <li><a href="#">Funzioni</a></li>
-          <li><a href="#">Piani e Prezzi</a></li>
-          <li class="logo"><a href="#">Accedi</a></li>
+          <li><a href="#">Supporto</a></li>
+          <li><a href="#">Contatta l'ufficio vendite</a></li>
+          <li><a href="#">Accedi</a></li>
+          <li class="logo"><a href="#" class="txt-white">Inizia</a></li>
         </ul>
       </div>
     </div>
@@ -44,7 +44,7 @@
     <div id="jumbotron">
      <div class="jumbo-box">
        <div class="jumbo-top">
-         <h1><strong>Tutto ciò che ti serve per il lavoro, in un unico posto</strong></h1>
+         <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
        </div>
        <div class="jumbo-bottom d-flex">
         <div class="j-txt"></div>
@@ -58,8 +58,8 @@
         <div class="sect-title">
           <h2>Trova il piano business che fa per te</h2>
           <ul class="d-flex">
-            <li>Fatturazione Mensile</li>
-            <li>Fatturazione Annuale</li>
+            <li><input type="radio" name="fatturazione" id="mensile"> Fatturazione Mensile</li>
+            <li><input type="radio" name="fatturazione" id="annuale"> Fatturazione Annuale</li>
           </ul>
         </div>
         
