--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
          <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
        </div>
        <div class="jumbo-bottom d-flex">
-        <div class="j-txt"></div>
-        <div class="j-img"></div>
+        <div class="j-txt">
+          <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+          <a href="#" class="txt-white">Inizia la tua prova gratuita</a>
+          <p>Annulla in qualsiasi momento</p>
+
+        </div>
+        <div class="j-img"><img src="./assets/img/jumbo.png" alt="jumbo"></div>
        </div>
       </div>
     </div>
