[add] package cards and partner box

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <!---FONT AWESOME-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <!--Google Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,3 00..800;1,300..800&display=swap" rel="stylesheet">
+
   <title>Dropbox</title>
 </head>
 
@@ -33,8 +38,6 @@
           <li class="logo"><a href="#" class="txt-white">Inizia</a></li>
         </ul>
       </div>
-    </div>
-
     </div>
 
   </header>
@@ -71,15 +74,70 @@
         <div class="row">
           <div class="col">
             <div class="card">
-              <div class="usertype"><i class="fa-solid fa-user"></i> Singolo</div>
-              <div class="offer"></div>
+              <div class="usertype">
+                <i class="fa-solid fa-user"></i> Singolo              
+              </div>
+              <div class="offer">
+                <h3>Professional</h3>
+                <h4>&euro; 12.00</h4>
+                <h5>/mese</h5>
+                <ul>
+                  <li><i class="fa-solid fa-user"></i> 1 Utente</li>
+                  <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
+                  <li><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                </ul>
+                <div class="links">
+                  <p>
+                    <a href="#" class="txt-white">Prova gratis per 30 giorni </a>
+                  </p>
+                 <p>
+                    oppure <a href="#">acquista ora</a>
+                  </p>
+                </div>
+                <div class="line"></div>
+                <ul><h4>Punti salienti del piano</h4>
+                  <li>
+                    <i class="fa-solid fa-check" style="color: #0061FF;"></i> Invia file fino a 100GB con Dropbox Transfert 
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check" style="color: #0061FF;"></i> Cartelle offline su dispositivi mobili
+                  </li>
+                </ul>
+                     
+              </div>
             </div>
           </div>
 
           <div class="col">
             <div class="card">
               <div class="usertype"><i class="fa-solid fa-users"></i> Team</div>
-              <div class="offer"></div>
+              <div class="offer">
+                <h3>Professional</h3>
+                <h4>&euro; 12.00</h4>
+                <h5>/mese</h5>
+                <ul>
+                  <li><i class="fa-solid fa-user"></i> 1 Utente</li>
+                  <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
+                  <li><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                </ul>
+                <div class="links">
+                  <p>
+                    <a href="#" class="txt-white">Prova gratis per 30 giorni </a>
+                  </p>
+                 <p>
+                    oppure <a href="#">acquista ora</a>
+                  </p>
+                </div>
+                <div class="line"></div>
+                <ul><h4>Punti salienti del piano</h4>
+                  <li>
+                    <i class="fa-solid fa-check" style="color: #0061FF;"></i> Invia file fino a 100GB con Dropbox Transfert 
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check" style="color: #0061FF;"></i> Cartelle offline su dispositivi mobili
+                  </li>
+                </ul>
+              </div>
 
             </div>
           </div>
@@ -87,7 +145,33 @@
           <div class="col">
             <div class="card">
               <div class="usertype"><i class="fa-solid fa-building"></i> Azienda</div>
-              <div class="offer"></div>
+              <div class="offer">
+                <h3>Professional</h3>
+                <h4>&euro; 12.00</h4>
+                <h5>/mese</h5>
+                <ul>
+                  <li><i class="fa-solid fa-user"></i> 1 Utente</li>
+                  <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
+                  <li><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                </ul>
+                <div class="links">
+                  <p>
+                    <a href="#" class="txt-white">Prova gratis per 30 giorni </a>
+                  </p>
+                 <p>
+                    oppure <a href="#">acquista ora</a>
+                  </p>
+                </div>
+                <div class="line"></div>
+                <ul><h4>Punti salienti del piano</h4>
+                  <li>
+                    <i class="fa-solid fa-check" style="color: #0061FF;"></i> Invia file fino a 100GB con Dropbox Transfert 
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-check" style="color: #0061FF;"></i> Cartelle offline su dispositivi mobili
+                  </li>
+                </ul>
+              </div>
 
             </div>
           </div>
@@ -95,7 +179,13 @@
           <div class="col large">
             <div class="card">
               <div class="usertype"><i class="fa-solid fa-building"></i> Team</div>
-              <div class="offer large"></div>
+              <div class="offer-large d-flex">
+                <p>
+                  <h3>Enterprise</h3>
+                  <h4>Contatta l'ufficio vendite per i prezzi</h4>
+                </p>
+                <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su larga scala.</p>
+              </div>
 
             </div>
           </div>
@@ -106,8 +196,14 @@
 
     <section class="partner">
       <div class="container d-flex">
-        <div class="partner-img debug"></div>
-        <div class="partner-txt debug"></div>
+        <div class="partner-img">
+          <img src="./assets/img/partner.png" alt="partner">
+        </div>
+        <div class="partner-txt">
+          <h3>Entra in contatto con un partner Dropbox</h3>
+          <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+          <span><a href="#" class="btn-white">Trova un partner</a></span>
+        </div>
       </div>
     </section>
 
