[add] business section

--- a/index.html
+++ b/index.html
@@ -214,44 +214,74 @@
         </div>
         <div class="row">
           <div class="col">
-            <div class="functions debug">
-              <div class="img"></div>
-              <div class="txt"></div>
+            <div class="functions">
+              <div class="img">
+                <img src="./assets/img/business-feature-switching-tools.png" alt="tools">
+              </div>
+              <div class="txt">
+                <h3>Passa di meno da uno strumento all'altro</h3>
+                <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file di Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+              </div>
             </div>
           </div>
 
           <div class="col">
-            <div class="functions debug">
-              <div class="img"></div>
-              <div class="txt"></div>
+            <div class="functions">
+              <div class="img">
+                <img src="./assets/img/business-feature-send-files-it.png" alt="send">
+              </div>
+              <div class="txt">
+                <h3>Passa di meno da uno strumento all'altro</h3>
+                <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file di Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+              </div>
             </div>
           </div>
 
           <div class="col">
-            <div class="functions debug">
-              <div class="img"></div>
-              <div class="txt"></div>
+            <div class="functions">
+              <div class="img">
+                <img src="./assets/img/business-feature-coordinate-it.png" alt="coordinate">
+              </div>
+              <div class="txt">
+                <h3>Passa di meno da uno strumento all'altro</h3>
+                <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file di Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+              </div>
             </div>
           </div>
 
           <div class="col">
-            <div class="functions debug">
-              <div class="img"></div>
-              <div class="txt"></div>
+            <div class="functions">
+              <div class="img">
+                <img src="./assets/img/business-feature-integrations-it.png" alt="integrations">
+              </div>
+              <div class="txt">
+                <h3>Passa di meno da uno strumento all'altro</h3>
+                <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file di Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+              </div>
             </div>
           </div>
 
           <div class="col">
-            <div class="functions debug">
-              <div class="img"></div>
-              <div class="txt"></div>
+            <div class="functions">
+              <div class="img">
+                <img src="./assets/img/business-feature-multi-device.png" alt="device">
+              </div>
+              <div class="txt">
+                <h3>Passa di meno da uno strumento all'altro</h3>
+                <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file di Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+              </div>
             </div>
           </div>
 
           <div class="col">
-            <div class="functions debug">
-              <div class="img"></div>
-              <div class="txt"></div>
+            <div class="functions">
+              <div class="img">
+                <img src="./assets/img/business-feature-security.png" alt="security">
+              </div>
+              <div class="txt">
+                <h3>Passa di meno da uno strumento all'altro</h3>
+                <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file di Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+              </div>
             </div>
           </div>
         </div>
