--- a/index.html
+++ b/index.html
@@ -295,7 +295,65 @@
 
   </main>
 
-  <footer>F</footer>
+  <footer>
+    <div class="foot-box">
+      <div class="row">
+        <div class="foot-col">
+          <ul><h3>Dropbox</h3>
+            <li><a href="#"></a>Applicazione Desktop</li>
+            <li><a href="#"></a>Perchè Dropbox</li>
+            <li><a href="#"></a>Piani</li>
+            <li><a href="#"></a>Sicurezza</li>
+            <li><a href="#"></a>Funzioni</li>
+          </ul>
+        </div>
+
+        <div class="foot-col">
+          <ul><h3>Prodotti</h3>
+            <li><a href="#"></a>Applicazione Desktop</li>
+            <li><a href="#"></a>Perchè Dropbox</li>
+            <li><a href="#"></a>Piani</li>
+            <li><a href="#"></a>Sicurezza</li>
+            <li><a href="#"></a>Funzioni</li>
+          </ul>
+        </div>
+
+        <div class="foot-col">
+          <ul><h3>Azienda</h3>
+            <li><a href="#"></a>Applicazione Desktop</li>
+            <li><a href="#"></a>Perchè Dropbox</li>
+            <li><a href="#"></a>Piani</li>
+            <li><a href="#"></a>Sicurezza</li>
+            <li><a href="#"></a>Funzioni</li>
+          </ul>
+        </div>
+
+        <div class="foot-col">
+          <ul><h3>Supporto</h3>
+            <li><a href="#"></a>Applicazione Desktop</li>
+            <li><a href="#"></a>Perchè Dropbox</li>
+            <li><a href="#"></a>Piani</li>
+            <li><a href="#"></a>Sicurezza</li>
+            <li><a href="#"></a>Funzioni</li>
+          </ul>
+        </div>
+
+        <div class="foot-col">
+          <ul><h3>Community</h3>
+            <li><a href="#"></a>Applicazione Desktop</li>
+            <li><a href="#"></a>Perchè Dropbox</li>
+            <li><a href="#"></a>Piani</li>
+            <li><a href="#"></a>Sicurezza</li>
+            <li><a href="#"></a>Funzioni</li>
+          </ul>
+        </div>
+      </div>
+      <div class="line"></div>
+      <div class="language">
+        <span>&#127758; Italiano &#9652;</span>
+      </div>
+    </div>
+  </footer>
   
 </body>
 
