[add] jumbotron anchor link

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
           <a href="#" class="txt-white">Inizia la tua prova gratuita</a>
           <p>Annulla in qualsiasi momento</p>
+          <div class="anchor">
+            <a href="#anchor1"><i class="fa-solid fa-arrow-down fa-bounce" style="color: black;"></i></a>
+          </div>
 
         </div>
         <div class="j-img"><img src="./assets/img/jumbo.png" alt="jumbo"></div>
@@ -61,6 +64,7 @@
       </div>
     </div>
 
+    <section id="anchor1"></section>
     <section class="package">
       <div class="container">
         <div class="sect-title">
