[modify] card lists icons from html to css

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
               <div class="offer">
                 <h3>Professional</h3>
                 <h4>&euro; 12.00</h4>
-                <h5>/mese</h5>
-                <ul>
-                  <li><i class="fa-solid fa-user"></i> 1 Utente</li>
-                  <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
-                  <li><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                <span>/mese</span>
+                <ul class="features">
+                  <li>1 Utente</li>
+                  <li>5 TB di spazio di archiviazione sicuro</li>
+                  <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
                 </ul>
                 <div class="links">
                   <p>
@@ -99,12 +99,12 @@
                   </p>
                 </div>
                 <div class="line"></div>
-                <ul><h4>Punti salienti del piano</h4>
+                <ul class="keypoint"><h4>Punti salienti del piano</h4>
                   <li>
-                    <i class="fa-solid fa-check" style="color: #0061FF;"></i> Invia file fino a 100GB con Dropbox Transfert 
+                    Invia file fino a 100GB con Dropbox Transfert 
                   </li>
                   <li>
-                    <i class="fa-solid fa-check" style="color: #0061FF;"></i> Cartelle offline su dispositivi mobili
+                    Cartelle offline su dispositivi mobili
                   </li>
                 </ul>
                      
@@ -119,10 +119,10 @@
                 <h3>Professional</h3>
                 <h4>&euro; 12.00</h4>
                 <h5>/mese</h5>
-                <ul>
-                  <li><i class="fa-solid fa-user"></i> 1 Utente</li>
-                  <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
-                  <li><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                <ul class="features">
+                  <li>1 Utente</li>
+                  <li>5 TB di spazio di archiviazione sicuro</li>
+                  <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
                 </ul>
                 <div class="links">
                   <p>
@@ -133,12 +133,12 @@
                   </p>
                 </div>
                 <div class="line"></div>
-                <ul><h4>Punti salienti del piano</h4>
+                <ul class="keypoint"><h4>Punti salienti del piano</h4>
                   <li>
-                    <i class="fa-solid fa-check" style="color: #0061FF;"></i> Invia file fino a 100GB con Dropbox Transfert 
+                    Invia file fino a 100GB con Dropbox Transfert 
                   </li>
                   <li>
-                    <i class="fa-solid fa-check" style="color: #0061FF;"></i> Cartelle offline su dispositivi mobili
+                    Cartelle offline su dispositivi mobili
                   </li>
                 </ul>
               </div>
@@ -153,10 +153,10 @@
                 <h3>Professional</h3>
                 <h4>&euro; 12.00</h4>
                 <h5>/mese</h5>
-                <ul>
-                  <li><i class="fa-solid fa-user"></i> 1 Utente</li>
-                  <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
-                  <li><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                <ul class="features">
+                  <li>1 Utente</li>
+                  <li>5 TB di spazio di archiviazione sicuro</li>
+                  <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
                 </ul>
                 <div class="links">
                   <p>
@@ -167,12 +167,12 @@
                   </p>
                 </div>
                 <div class="line"></div>
-                <ul><h4>Punti salienti del piano</h4>
+                <ul class="keypoint"><h4>Punti salienti del piano</h4>
                   <li>
-                    <i class="fa-solid fa-check" style="color: #0061FF;"></i> Invia file fino a 100GB con Dropbox Transfert 
+                    Invia file fino a 100GB con Dropbox Transfert 
                   </li>
                   <li>
-                    <i class="fa-solid fa-check" style="color: #0061FF;"></i> Cartelle offline su dispositivi mobili
+                    Cartelle offline su dispositivi mobili
                   </li>
                 </ul>
               </div>
