[modify] first section cards spacing and layout

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                 <h4>&euro; 12.00</h4>
                 <h5>/mese</h5>
                 <ul class="features">
-                  <li>1 Utente</li>
-                  <li>5 TB di spazio di archiviazione sicuro</li>
-                  <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                  <li>3 o più utenti</li>
+                  <li>Tutto lo spazio di cui ha bisogno il tuo team</li>
+                  <li>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</li>
                 </ul>
                 <div class="links">
                   <p>
@@ -135,10 +135,19 @@
                 <div class="line"></div>
                 <ul class="keypoint"><h4>Punti salienti del piano</h4>
                   <li>
-                    Invia file fino a 100GB con Dropbox Transfert 
+                    Nessun limite di spazio per i file
                   </li>
                   <li>
                     Cartelle offline su dispositivi mobili
+                  </li>
+                  <li>
+                    Risparmio del 50% rispetto alle iscrizioni singole
+                  </li>
+                  <li>
+                    Possibilità di inserire nuovi membri del team 
+                  </li>
+                  <li>
+                    Gestione dei permessi in base ai ruoli 
                   </li>
                 </ul>
               </div>
@@ -169,10 +178,13 @@
                 <div class="line"></div>
                 <ul class="keypoint"><h4>Punti salienti del piano</h4>
                   <li>
-                    Invia file fino a 100GB con Dropbox Transfert 
+                    Cartelle offline su dispositivi mobili
                   </li>
                   <li>
-                    Cartelle offline su dispositivi mobili
+                    Servizio assistenza 24/h
+                  </li>
+                  <li>
+                    Possibilità di personalizzazione totale 
                   </li>
                 </ul>
               </div>
@@ -183,12 +195,16 @@
           <div class="col large">
             <div class="card">
               <div class="usertype"><i class="fa-solid fa-building"></i> Team</div>
-              <div class="offer-large d-flex">
-                <p>
+              <div class="offer-large d-flex">        
+                <div class="txt">
                   <h3>Enterprise</h3>
                   <h4>Contatta l'ufficio vendite per i prezzi</h4>
-                </p>
-                <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su larga scala.</p>
+                
+                  <p>Soluzioni personalizzate e supporto su misura per   aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                </div> 
+                <div class="sales">
+                  <a href="#" class="txt-white">Contatta l'ufficio vendite</a>
+                </div> 
               </div>
 
             </div>
