[add] first section last card link

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!--Google Fonts-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,3 00..800;1,300..800&display=swap" rel="stylesheet">
 
   <title>Dropbox</title>
 </head>
@@ -35,7 +32,7 @@
           <li><a href="#">Supporto</a></li>
           <li><a href="#">Contatta l'ufficio vendite</a></li>
           <li><a href="#">Accedi</a></li>
-          <li class="logo"><a href="#" class="txt-white">Inizia</a></li>
+          <li class="logo"><a href="#" class="btn-blue">Inizia</a></li>
         </ul>
       </div>
     </div>
@@ -52,7 +49,7 @@
        <div class="jumbo-bottom d-flex">
         <div class="j-txt">
           <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
-          <a href="#" class="txt-white">Inizia la tua prova gratuita</a>
+          <a href="#" class="btn-blue">Inizia la tua prova gratuita</a>
           <p>Annulla in qualsiasi momento</p>
           <div class="anchor">
             <a href="#anchor1"><i class="fa-solid fa-arrow-down fa-bounce" style="color: black;"></i></a>
@@ -92,7 +89,7 @@
                 </ul>
                 <div class="links">
                   <p>
-                    <a href="#" class="txt-white">Prova gratis per 30 giorni </a>
+                    <a href="#" class="btn-blue">Prova gratis per 30 giorni </a>
                   </p>
                  <p>
                     oppure <a href="#">acquista ora</a>
@@ -118,7 +115,7 @@
               <div class="offer">
                 <h3>Professional</h3>
                 <h4>&euro; 12.00</h4>
-                <h5>/mese</h5>
+                <span>/mese</span>
                 <ul class="features">
                   <li>3 o più utenti</li>
                   <li>Tutto lo spazio di cui ha bisogno il tuo team</li>
@@ -126,7 +123,7 @@
                 </ul>
                 <div class="links">
                   <p>
-                    <a href="#" class="txt-white">Prova gratis per 30 giorni </a>
+                    <a href="#" class="btn-blue">Prova gratis per 30 giorni </a>
                   </p>
                  <p>
                     oppure <a href="#">acquista ora</a>
@@ -161,7 +158,7 @@
               <div class="offer">
                 <h3>Professional</h3>
                 <h4>&euro; 12.00</h4>
-                <h5>/mese</h5>
+                <span>/mese</span>
                 <ul class="features">
                   <li>1 Utente</li>
                   <li>5 TB di spazio di archiviazione sicuro</li>
@@ -169,7 +166,7 @@
                 </ul>
                 <div class="links">
                   <p>
-                    <a href="#" class="txt-white">Prova gratis per 30 giorni </a>
+                    <a href="#" class="btn-blue">Prova gratis per 30 giorni </a>
                   </p>
                  <p>
                     oppure <a href="#">acquista ora</a>
@@ -203,7 +200,7 @@
                   <p>Soluzioni personalizzate e supporto su misura per   aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
                 </div> 
                 <div class="sales">
-                  <a href="#" class="txt-white">Contatta l'ufficio vendite</a>
+                  <a href="#" class="btn-blue">Contatta l'ufficio vendite</a>
                 </div> 
               </div>
 
