[modify] body font style

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
             <div class="card">
               <div class="usertype"><i class="fa-solid fa-users"></i> Team</div>
               <div class="offer">
-                <h3>Professional</h3>
-                <h4>&euro; 12.00</h4>
-                <span>/mese</span>
+                <h3>Advanced</h3>
+                <h4>&euro; 18.00</h4>
+                <span>/utente/mese</span>
                 <ul class="features">
                   <li>3 o più utenti</li>
                   <li>Tutto lo spazio di cui ha bisogno il tuo team</li>
@@ -156,9 +156,9 @@
             <div class="card">
               <div class="usertype"><i class="fa-solid fa-building"></i> Azienda</div>
               <div class="offer">
-                <h3>Professional</h3>
-                <h4>&euro; 12.00</h4>
-                <span>/mese</span>
+                <h3>Enterprise</h3>
+                <h4>Contattaci</h4>
+                <span>-</span>
                 <ul class="features">
                   <li>1 Utente</li>
                   <li>5 TB di spazio di archiviazione sicuro</li>
